Accept or Decline proposal
